--- a/src/main/resources/templates/layouts/defaultLayout.html
+++ b/src/main/resources/templates/layouts/defaultLayout.html
@@ -61,7 +61,7 @@
                         <a th:href="@{/orders}">ORDER</a>
                     </li>
                     <li>
-                        <a href="mypage.html">MYPAGE</a>
+                        <a th:href="@{/mypage}">MYPAGE</a>
                     </li>
                 </ul>
             </div>
