--- a/src/main/resources/templates/main/item/itemDtl.html
+++ b/src/main/resources/templates/main/item/itemDtl.html
@@ -188,7 +188,7 @@
                                                     </fieldset>
                                                 </td>
                                                 <td>
-                                                    <span th:text="${review.createdBy}"></span>
+                                                    <span th:text="|${#strings.substring(review.createdBy, 0, 1)}****|"></span>
                                                 </td>
                                                 <td>
                                                     <span th:text="${review.regDate}"></span>
@@ -412,7 +412,19 @@
         /* 리뷰 작성 버튼 */
         $(".write_btn").click(function () {
             let itemId = [[${item.id}]];
-            location.href = "/review/enroll?itemId=" + itemId;
+
+            $.ajax({
+                url: "/review/check/" + itemId,
+                type: "POST",
+                dataType: "text",
+                cache: false,
+                success: function (result, status) {
+                    location.href = "/review/enroll?itemId=" + itemId;
+                },
+                error: function (request, status, error) {
+                    alert(request.responseText);
+                },
+            })
         });
 
         /* 리뷰 목록 버튼 */
